--- a/stilus.css
+++ b/stilus.css
@@ -68,4 +68,10 @@ footer{
         flex-direction: column;
         text-align: center;
     }
+    .kepek{
+    	flex-direction: column;
+    	align-content: space-between;
+    	justify-content: center;
+    	gap: 10px;
+}
 }
